--- a/app/views/owners/edit.erb
+++ b/app/views/owners/edit.erb
@@ -1,2 +1,26 @@
 <h1>Update Owner</h1>
+<form action="/owners" method="POST">
+  <input type="hidden" name="_params" value="patch">
+  <label>Name:</label>
+
+  <br>
+
+  <input type="text" name="owner[name]">
+
+  <h3>Existing Pets</h3>
+  <% @pets.each do |pet| %>
+    <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>" checked=
+    <%if pet.owner == @owner%>
+      <%="true"%>
+    <%else%>
+      <%="false"%>
+    <%end%>
+    ><%= pet.name %>
+    
+    <br>
+  <% end %>
+  <br>
+  <input type="text" name="pet[name]">
+  <input type="submit" value="Update Owner">
+</form>
 
