--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -12,6 +12,6 @@
     <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %><br>
   <% end %>
   <br>
-
+  <input type="text" name="pet[name]">
   <input type="submit" value="Create Owner">
 </form>
