--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,18 @@
 <h1>Create a new Pet</h1>
 
+<form action="/pets" method="POST">
+  <label>Name:</label>
+
+  <br>
+
+  <input type="text" name="pet_name">
+    <h3>Existing Owners</h3>
+  <% @owners.each do |owner| %>
+    <input type="radio" name="owner" id="<%=owner.id%>" value="<%=owner.id%>"><%= owner.name %><br>
+  <% end %>
+  <br>
+
+  <input type="text" name="owner_name">
+
+  <input type="submit" value="Create Pet">
+</form>
